--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
   flutter_credit_card: ^4.0.0+1
+  flutter_stripe: ^9.6.0
+  dio: ^5.3.4
 
 dev_dependencies:
   flutter_test:
