--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_credit_card: ^4.0.0+1
   flutter_stripe: ^9.6.0
   dio: ^5.3.4
+  dartz: ^0.10.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
